# pykanto

./: .Rhistory  .gitignore  0.0_great-tit-song-segment.yml  0.2_great-tit-song-ml.yml  00_gtit.Rproj  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  genindex.html  greti_files.csv  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci-cd.yml  release_to_pypi.yml
_autosummary/: pykanto.dataset.html  pykanto.labelapp.data.html  pykanto.labelapp.html  pykanto.labelapp.main.html  pykanto.parameters.html  pykanto.plot.html  pykanto.signal.analysis.html  pykanto.signal.cluster.html  pykanto.signal.filter.html  pykanto.signal.html  pykanto.signal.segment.html  pykanto.signal.spectrogram.html  pykanto.utils.compute.html  pykanto.utils.custom.html  pykanto.utils.html  pykanto.utils.paths.html  pykanto.utils.read.html  pykanto.utils.types.html  pykanto.utils.write.html  pykanto.utils.xenocanto.html
_modules/: index.html
_modules/pykanto/: dataset.html  parameters.html
_sources/: index.md.txt  index.rst.txt
_sources/_autosummary/: pykanto.labelapp.main.rst.txt  pykanto.utils.paths.rst.txt
_sources/contents/: FAQs.rst.txt  analysis.rst.txt  dataset.rst.txt  hpc.md.txt  paths.rst.txt  segmentation.rst.txt
_sources/source/: pykanto.intlabel.rst.txt
_static/: copybutton.js  custom.css  custom_rtd.css
_static/css/: custom.css
avgn/: dataset.py
avgn/signalprocessing/: create_spectrogram_dataset.py
contents/: 1_getting-started.html  2_paths-and-dirs.html  3_basic-workflow.html  FAQs.html  analysis.html  dataset.html  dataset_class.html  hpc.html  intro.html  nb-test.html  paths.html  segmentation.html
dependencies/: 0.0_great-tit-song-analysis.yml  0.0_great-tit-song-segment.yml  0.1_great-tit-song.yml  0.2_great-tit-song-ml.yml  0.2_great-tit-song-ml_11092020.yml  chipper.md  instructions.md
dependencies/AviaNZ-2.1/: AviaNZ.py  AviaNZ_batch.py  Dialogs.py  DialogsTraining.py  Segment.py  SignalProc.py
docs/: 0.0_manual-segmentation.md  0.0_setup.md  Makefile  conf.py  conf_rtd.py  index.html  index.html.save  index.md  index.rst  make.bat
docs/_autosummary/: pykanto.app.data.rst  pykanto.app.rst  pykanto.dataset.rst  pykanto.intlabel.data.rst  pykanto.labelapp.data.rst  pykanto.labelapp.rst  pykanto.parameters.rst  pykanto.plot.rst  pykanto.signal.spectrogram.rst  pykanto.utils.compute.rst  pykanto.utils.io.rst  pykanto.utils.paths.rst  pykanto.utils.read.rst  pykanto.utils.rst  pykanto.utils.slurm.rst  pykanto.utils.slurm.tester.rst  pykanto.utils.types.rst  pykanto.utils.write.rst
docs/_templates/: footer.html  layout.html
docs/contents/: 1_getting-started.md  2_basic-workflow.ipynb  3_basic-workflow.ipynb  3_project-structure.md  4_segmenting-files.ipynb  FAQs.md  FAQs.rst  basic-workflow.ipynb  dataset.rst  deep-learning.md  feature-extraction.ipynb  hpc.md  hpc.rst  installation.md  interactive-app.md  kantodata-dataset.ipynb  paths.rst  project-setup.md  segmenting-files.ipynb  segmenting-vocalisations.ipynb
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: pykanto.signal.rst
jupyter_execute/contents/: 3_basic-workflow.html
notebooks/prepare-data/: test.py  (+13 more)
pykanto/: dataset.py  parameters.py  plot.py
renv/: .gitignore
resources/: sample_note_durantions.csv  sample_syllable_durations.csv
source/: pykanto.html  pykanto.labelapp.html
tests/: app_demo.py  delete_plot_update.py  export-for-training.py  paper_worked_example.py  scratchpad.py  test_dataset.py  test_filter.py  test_pipeline.py
vocalseg/: dynamic_thresholding.py
(+546 files in other folders)
