[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pykanto"
description = "A library for managing and analysing animal vocalisation data."
version = "0.1.8"
authors = [{ name = "Nilo M. Recalde", email = "nilomerinorecalde@gmail.com" }]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pandas >= 1",
    "numpy >= 1.17, <1.23.1",
    "scipy >= 1.5",
    "numba >= 0.49",
    "tqdm",
    "audio-metadata >= 0.11.1",
    "pydantic < 2",
    "ray[default]",
    "pysoundfile >= 0.9",
    "umap-learn >= 0.5",
    "joblib >= 1.2.0",
    "hdbscan >= 0.8.29",
    "seaborn >= 0.11",
    "scikit-image >= 0.18",
    "librosa >= 0.8, <0.10.0",
    "bokeh >=2.3.3, <3.0.0",
    "ujson",
    "psutil",
    "attrs<19.4",
    "gitpython",
    "typer == 0.6",
]

[project.optional-dependencies]
dev = ["ipywidgets <= 8.0.3", "ipykernel < 6.20", "pytest >= 7", "nox", "black"]
test = ["pytest >=7"]
jupyter = [
    "jsonschema == 4.17.3",
    "jupyter == 1.0.0",
    "jupyter-cache == 0.5.0",
    "jupyter-client == 7.4.8",
    "jupyter-console == 6.4.4",
    "jupyter-core == 5.1.0",
    "jupyter-events == 0.5.0",
    "jupyter-server == 2.0.1",
    "jupyter-server-terminals == 0.4.2",
    "jupyterlab-pygments == 0.2.2",
    "jupyterlab-widgets == 3.0.4",
]
doc = [
    "sphinx <5, >= 3.5.4",
    "sphinx-copybutton",
    "sphinx_book_theme == 0.3.3",
    "myst-nb ==  0.17",
    "myst-parser == 0.18",
]

[project.urls]
Source = "https://github.com/nilomr/pykanto"
Documentation = "https://nilomr.github.io/pykanto"

[project.scripts]
pykanto-slaunch = 'pykanto.utils.slurm.launch:submit_job'

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
float_to_top = 'True'
